# aphrodite-engine

./: CMakeLists.txt  MANIFEST.in  pyproject.toml  setup.py
aphrodite/: _aiter_ops.py  _custom_ops.py  env_override.py  envs.py  sampling_params.py
aphrodite/benchmarks/: perf.py
aphrodite/compilation/: backends.py  cuda_graph.py  decorators.py  wrapper.py
aphrodite/compilation/passes/: pass_manager.py
aphrodite/compilation/passes/fusion/: act_quant_fusion.py  allreduce_rms_fusion.py  collective_fusion.py  sequence_parallelism.py
aphrodite/config/: aphrodite.py  attention.py  device.py  model.py  parallel.py  speculative.py
aphrodite/distributed/: parallel_state.py
aphrodite/distributed/device_communicators/: all2all.py
aphrodite/distributed/eplb/: eplb_communicator.py  rebalance_execute.py
aphrodite/engine/: protocol.py
aphrodite/entrypoints/: chat_utils.py  llm.py
aphrodite/entrypoints/anthropic/: protocol.py  serving.py
aphrodite/entrypoints/openai/: cli_args.py  fingerprint.py
aphrodite/entrypoints/openai/chat_completion/: batch_serving.py  protocol.py  serving.py
aphrodite/entrypoints/openai/completion/: protocol.py  serving.py
aphrodite/entrypoints/openai/engine/: protocol.py  serving.py
aphrodite/entrypoints/openai/generate/: api_router.py
aphrodite/entrypoints/openai/parser/: harmony_utils.py
aphrodite/entrypoints/openai/responses/: serving.py  streaming_events.py
aphrodite/entrypoints/serve/render/: serving.py
aphrodite/inputs/: engine.py  llm.py
aphrodite/lora/: worker_manager.py
aphrodite/metal/: __init__.py  compat.py  config.py  envs.py  metal_backend.py  platform.py  utils.py  yoco_fast_prefill.py
aphrodite/metal/metal/: __init__.py  build.py
aphrodite/metal/metal_kernel_backend/: attention_linear.py  attention_sdpa.py  cache.py  packed_prefill_compat.py  paged_attention.py  turboquant.py
aphrodite/metal/multimodal/: __init__.py  embeddings.py  feature_spec.py
aphrodite/metal/multimodal/qwen3_vl/: __init__.py  adapter.py
aphrodite/metal/paged_attention_backend/: hybrid.py  mha.py  mla.py
aphrodite/metal/profiler/: __init__.py  wrapper.py
aphrodite/metal/pytorch_backend/: __init__.py  tensor_bridge.py
aphrodite/metal/stt/: __init__.py  loader.py  policy.py  registry.py  runtime.py  serve.py
aphrodite/metal/stt/qwen3_asr/: adapter.py  config.py  model.py  transcriber.py
aphrodite/metal/stt/whisper/: __init__.py  adapter.py  model.py  transcriber.py
aphrodite/metal/v1/: __init__.py  cache_policy.py  contiguous_cache.py  model_adapter.py  model_lifecycle.py  model_runner.py  sampling_batch.py  structured_output.py
aphrodite/metal/v1/mm/: __init__.py  encoder_cache.py
aphrodite/model_executor/layers/: activation.py  batch_invariant.py  deepseek_compressor.py  deepseek_v4_attention.py  linear.py  mhc.py  mla.py  utils.py
aphrodite/model_executor/layers/attention/: mla_attention.py
aphrodite/model_executor/layers/fused_moe/: __init__.py  all2all_utils.py  config.py  cpu_fused_moe.py  flashinfer_cutlass_moe.py  fused_batched_moe.py  fused_humming_moe.py  fused_marlin_moe.py  fused_moe.py  fused_moe_method_base.py  layer.py  rocm_aiter_fused_moe.py  routed_experts_capturer.py  triton_cutlass_moe.py  unquantized_fused_moe_method.py  utils.py
aphrodite/model_executor/layers/mamba/: linear_attn.py  mamba_utils.py
aphrodite/model_executor/layers/quantization/: exl3.py  modelopt.py
aphrodite/model_executor/layers/rotary_embedding/: deepseek_scaling_rope.py
aphrodite/model_executor/model_loader/: base_loader.py  default_loader.py
aphrodite/model_executor/models/: bailing_moe_linear.py  cohere2_vision.py  cohere_asr.py  cohere_moe.py  deepseek_v4.py  deepseek_v4_mtp.py  gemma4.py  granite4_vision.py  laguna.py  llama.py  longcat_flash.py  mimo_audio.py  mimo_v2.py  mimo_v2_mtp.py  mimo_v2_omni.py  minimax_m2.py  mistral_eagle.py  moondream3.py  qwen2.py  qwen3_omni_moe_thinker.py  qwen3_vl.py  registry.py
aphrodite/multimodal/: cache.py  registry.py
aphrodite/parser/: abstract_parser.py
aphrodite/reasoning/: __init__.py  cohere_command_reasoning_parser.py  olmo3_reasoning_parser.py  poolside_v1_reasoning_parser.py
aphrodite/renderers/: base.py  embed_utils.py  hf.py
aphrodite/tokenizers/: deepseek_v4.py
aphrodite/tool_parsers/: __init__.py  cohere_command_tool_parser.py  deepseekv32_tool_parser.py  poolside_v1_tool_parser.py  streaming.py
aphrodite/transformers_utils/: config.py  model_arch_config_convertor.py
aphrodite/transformers_utils/configs/: __init__.py  mimo_v2_omni.py  moondream3.py
aphrodite/transformers_utils/processors/: __init__.py  mimo_v2_omni.py  moondream3.py
aphrodite/utils/: flashinfer.py  multi_stream_utils.py
aphrodite/v1/: kv_cache_interface.py  request.py
aphrodite/v1/attention/: selector.py
aphrodite/v1/core/: kv_cache_coordinator.py  kv_cache_manager.py  kv_cache_utils.py  single_type_kv_cache_manager.py
aphrodite/v1/engine/: __init__.py  async_llm.py  core.py  input_processor.py  logprobs.py
aphrodite/v1/kv_offload/: base.py  factory.py  reuse_manager.py
aphrodite/v1/metrics/: ray_wrappers.py
aphrodite/v1/sample/: metadata.py  rejection_sampler.py  sampler.py  thinking_budget_state.py
aphrodite/v1/spec_decode/: dflash.py  llm_base_proposer.py
aphrodite/v1/structured_output/: __init__.py  request.py
aphrodite/v1/worker/: cpu_model_runner.py  gpu_input_batch.py  gpu_model_runner.py  gpu_ubatch_wrapper.py  gpu_worker.py  metal_worker.py
cmake/: metal_extension.cmake
cmake/external_projects/: deepgemm.cmake
csrc/: activation_kernels.cu  ops.h  persistent_topk.cuh  pos_encoding_kernels.cu  topk.cu  torch_bindings.cpp
csrc/cpu/: cpu_attn.cpp  cpu_attn_fp8.hpp  cpu_types_arm.hpp  cpu_types_vxe.hpp  cpu_types_x86.hpp  generate_cpu_attn_dispatch.py  torch_bindings.cpp
csrc/libtorch_stable/: torch_bindings.cpp
csrc/metal/: paged_ops.cpp
csrc/metal/kernels_v1/: pagedattention.metal
csrc/metal/kernels_v2/: pagedattention.metal
csrc/moe/: moe_ops.h
requirements/: metal.txt
tools/: report_build_time_ninja.py
(+80 files in other folders)
