[build-system]
# Should be mirrored in requirements/build/cuda.txt
requires = [
    "cmake>=3.26.1",
    "ninja",
    "packaging>=24.2",
    "setuptools>=77.0.3,<81.0.0",
    "setuptools-scm>=8.0",
    "torch == 2.11.0",
    "wheel",
    "jinja2",
    "mlx>=0.31.0,<0.32.0; platform_system == 'Darwin' and platform_machine == 'arm64'",
    "nanobind==2.10.2; platform_system == 'Darwin' and platform_machine == 'arm64'",
]
build-backend = "setuptools.build_meta"

[project]
name = "aphrodite-engine"
authors = [{name = "PygmalionAI"}]
license = { file = "LICENSE" }
readme = "README.md"
description = "Serving LLMs at Scale"
classifiers = [
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Scientific/Engineering :: Information Analysis",
]
requires-python = ">=3.10,<3.15"
dynamic = [ "version", "dependencies", "optional-dependencies"]

[project.urls]
Homepage="https://github.com/aphrodite-engine/aphrodite-engine"
Documentation="https://aphrodite.pygmalion.chat"

[project.scripts]
aphrodite = "aphrodite.entrypoints.cli.main:main"

[project.entry-points."aphrodite.general_plugins"]
lora_filesystem_resolver = "aphrodite.plugins.lora_resolvers.filesystem_resolver:register_filesystem_resolver"
lora_hf_hub_resolver = "aphrodite.plugins.lora_resolvers.hf_hub_resolver:register_hf_hub_resolver"

[tool.setuptools_scm]
# no extra settings needed, presence enables setuptools-scm

[tool.setuptools.packages.find]
where = ["."]
include = ["aphrodite*"]

[tool.ruff]
line-length = 120
exclude = [
    "aphrodite/vllm_flash_attn/**",
    "aphrodite/third_party/**",
]

[tool.ruff.lint.per-file-ignores]
"aphrodite/third_party/**" = ["ALL"]
"aphrodite/version.py" = ["F401"]
"aphrodite/_version.py" = ["ALL"]
"aphrodite/platforms/cuda.py" = ["E402"]

[tool.ruff.lint]
select = [
    # pycodestyle
    "E",
    # Pyflakes
    "F",
    # pyupgrade
    "UP",
    # flake8-bugbear
    "B",
    # flake8-implicit-str-concat
    "ISC",
    # flake8-simplify
    "SIM",
    # isort
    "I",
    # flake8-logging-format
    "G",
]
ignore = [
    # star imports
    "F405", "F403",
    # lambda expression assignment
    "E731",
    # zip without `strict=`
    "B905",
    # Loop control variable not used within loop body
    "B007",
    # f-string format
    "UP032",
    # ternary op
    "SIM108",
]

[tool.ruff.format]
docstring-code-format = true

[tool.mypy]
plugins = ['pydantic.mypy']
ignore_missing_imports = true
check_untyped_defs = true
follow_imports = "silent"

[tool.pytest.ini_options]
markers = [
    "slow_test",
    "skip_global_cleanup",
    "core_model: enable this model test in each PR instead of only nightly",
    "hybrid_model: models that contain mamba layers (including pure SSM and hybrid architectures)",
    "cpu_model: enable this model test in CPU tests",
    "cpu_test: mark test as CPU-only test",
    "split: run this test as part of a split",
    "distributed: run this test only in distributed GPU tests",
    "optional: optional tests that are automatically skipped, include --optional to run them",
]

[tool.ty.src]
respect-ignore-files = true

[tool.ty.environment]
python = "./.venv"

[tool.typos.files]
# these files may be written in non english words
extend-exclude = ["tests/models/fixtures/*", "tests/prompts/*", "tests/tokenizers_/*",
    "benchmarks/sonnet.txt", "tests/lora/data/*", "build/*",
    "examples/pooling/token_embed/*", "tests/models/language/pooling/*",
    "aphrodite/third_party/*", "aphrodite/entrypoints/serve/instrumentator/static/*", "tests/entrypoints/openai/speech_to_text/test_transcription_validation.py",
    "docs/governance/process.md", "docs/assets/contributing/aphrodite_bench_serve_timeline.html",
    "tests/v1/engine/test_fast_incdec_prefix_err.py", ".git/*"]
ignore-hidden = false

[tool.typos.default]
extend-ignore-identifiers-re = [".*[Uu][Ee][0-9][Mm][0-9].*"]

[tool.typos.default.extend-identifiers]
bbc5b7ede = "bbc5b7ede"
cudaDevAttrMaxSharedMemoryPerBlockOptin = "cudaDevAttrMaxSharedMemoryPerBlockOptin"
FUSED_MOE_CHUNK_SIZEs = "FUSED_MOE_CHUNK_SIZEs"
Intialize = "Intialize"
NOOPs = "NOOPs"
NO_REASONING_QUICK_THROUGHT = "NO_REASONING_QUICK_THROUGHT"
Overide = "Overide"
SFOuput = "SFOuput"

depthwise_seperable_out_channel = "depthwise_seperable_out_channel"
exl3_down_ptrs_suh = "exl3_down_ptrs_suh"
exl3_gate_ptrs_suh = "exl3_gate_ptrs_suh"
exl3_mgemm_ptrs_suh = "exl3_mgemm_ptrs_suh"
exl3_small_interm_a = "exl3_small_interm_a"
exl3_small_interm_g = "exl3_small_interm_g"
exl3_small_interm_u = "exl3_small_interm_u"
exl3_up_ptrs_suh = "exl3_up_ptrs_suh"
FoPE = "FoPE"
inverse_std_variences = "inverse_std_variences"
k_ot = "k_ot"
nin_shortcut = "nin_shortcut"
num_requsts = "num_requsts"
pard_token = "pard_token"
promts_per_rank = "promts_per_rank"
ptd_token_id = "ptd_token_id"
ser_de = "ser_de"
shared_memory_per_block_optin = "shared_memory_per_block_optin"
tool_call_512_thinkg_budget = "tool_call_512_thinkg_budget"
unsed_kwargs_1 = "unsed_kwargs_1"
unsed_kwargs_2 = "unsed_kwargs_2"
view_seperator = "view_seperator"
womens_doubles = "womens_doubles"

[tool.typos.default.extend-words]
iy = "iy"
indx = "indx"
# intel cpu features
tme = "tme"
dout = "dout"
Pn = "Pn"
arange = "arange"
thw = "thw"
subtile = "subtile"
HSA = "HSA"
setp = "setp"
CPY = "CPY"
thr = "thr"
Thr = "Thr"
PARD = "PARD"
pard = "pard"
AKS = "AKS"
ba = "ba"
fo = "fo"
nd = "nd"
eles = "eles"
datas = "datas"
ser = "ser"
ure = "ure"
VALU = "VALU"
ather = "ather"
assertation = "assertation"
dimention = "dimention"
divisble = "divisble"
enalbe = "enalbe"
examinate = "examinate"
exepected = "exepected"
interm = "interm"
lifecyle = "lifecyle"
poped = "poped"
promts = "promts"
quanization = "quanization"
quatized = "quatized"
repete = "repete"
requsts = "requsts"
suh = "suh"
thinkg = "thinkg"
# Walsh-Hadamard Transform
wht = "wht"
WHT = "WHT"
advnace = "advnace"
Algorith = "Algorith"
correctess = "correctess"
flattend = "flattend"
halfs = "halfs"
indicies = "indicies"
lauch = "lauch"
mappped = "mappped"
multplication = "multplication"
postive = "postive"
templtes = "templtes"
Weghts = "Weghts"

[tool.uv]
no-build-isolation-package = ["torch"]
